RadxEvadF/NOTES.txt

Step 1:
  write simple function to test data passing back and forth
*** Use extern "C" to prevent name mangling
*** Use byref() instead of pointer() because it is faster and we don't need the pointer in python.

*** passing arrays ...
Not needed yet:     use Ammar's conversions.py to convert Python list to ctypes array
??     numpy dataarray? to c_types ???
??     xarray.DataTree to c_types ???
just used the simple example from ctypes (no need for POINTERS or byref() in C library, just use "const *float", or "*float"):
from ctypes import *
TenIntegers = c_int * 10
ii = TenIntegers(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)
print(ii)
for i in ii: print(i, end=" ")

----
this works ...
>>> j = c_int(33)
>>> j
c_int(33)
>>> myarr = c_float * 5
>>> ii = myarr(1,2,3,4,5)
>>> ii
<__main__.c_float_Array_5 object at 0x1059797c0>
>>> jj = myarr(0,0,0,0,0)
>>> jj
<__main__.c_float_Array_5 object at 0x105979e00>
>>> lroselib.RadxEvad(ii, nGates, jj))
  File "<python-input-29>", line 1
    lroselib.RadxEvad(ii, nGates, jj))
                                     ^
SyntaxError: unmatched ')'
>>> lroselib.RadxEvad(ii, nGates, jj)
45210384
>>> for j in jj: print(j, end=" ")
... 
4.0 4.0 4.0 0.0 0.0 >>> 
>>> 
>>> nGates
4
----------


extern "C" 
{
  TestDataPassing(
    const float *sweepIndex, 
    const float *rays, 
    size_t nGates,
    float *ht,
    float *uu,
    );
}
    print... or take avg, whatever and return something. 

    TestDataPassing.cc  ==> libRadxlite.so
    TestDataPassing.py ==> TestDataPassing(...)

Linux:    $ g++ -dynamiclib TestDataPassing.cc -o TestDataPassing.so
MacOS:    $ g++ -dynamiclib TestDataPassing.cc -o TestDataPassing.dylib
Windows:  ??  $ g++ -dynamiclib TestDataPassing.cc -o TestDataPassing.dylib

MacOS:    $ g++ -dynamiclib -I../lrose/include TestDataPassing.cc -o TestDataPassing.dylib

Use -l: instead of -l. For example -l:libXYZ.a to link with libXYZ.a. Notice the lib and .a are written out, as opposed to -lXYZ which would auto-expand to libXYZ.so/libXYZ.a.

(base) eol-amalfi:RadxEvadF brenda$ g++ -dynamiclib -I./include RadxEvad.cc ./lib/libtoolsa.a  -o lroselite.dylib


Step 2:
    create binding and compile
    try TestDataPassing calling libRadx, or some other LROSE lib?

----
>>> cdll.LoadLibrary("lroselite.dylib")
<CDLL 'lroselite.dylib', handle 760e4eb0 at 0x1058fefd0>
>>> lroselite = CDLL("lroselite.dylib")
>>> lroselite.RadxEvad
<_FuncPtr object at 0x105998790>
>>> lroselite.RadxEvad(ii, ii, nGates, jj, jj, jj, jj, jj)
34619536
------

    test packaging 

Step 3:
    test import and use

>>> from ctypes import *
>>> cdll.LoadLibrary("TestDataPassing.dylib")
>>> lroselib = CDLL("TestDataPassing.dylib")
>>> lroselib.RadxEvad
<_FuncPtr object at 0x102938b80>

>>> i = c_int()
>>> lroselib.RadxEvad(byref(i))
43960968
>>> i
c_int(47)  <<== 47 was set in the RadxEvad function!


So, to pass an array by reference, then we need c_???
